<resources>
    <string name="app_name">Arch-Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have account</string>
    <string name="email_or_user_name">Email or user name</string>
    <string name="at_login">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="at_sign_up">SIGN UP</string>
    <string name="create_new_account">Create new account</string>
    <string name="product_name">Product name</string>
    <string name="add_to_bag">ADD TO BAG</string>
    <string name="edit_profile_informations">Edit Profile informations</string>
    <string name="my_orders">My orders</string>
    <string name="favourites_products">Favourites products</string>
    <string name="update_profile_info">Update profile info</string>
    <string name="products">Products</string>
    <string name="shippment_informations">Shippment Informations</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_order">CREATE ORDER</string>
    <string name="address">Address</string>
    <string name="order_created_successfully">Order created successfully</string>
</resources>