<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"

    tools:context=".fragments.SignInFragment">

    <!--    <data>-->

    <!--        <variable-->
    <!--            name="id"-->
    <!--            type="String" />-->

    <!--        <variable-->
    <!--            name="password"-->
    <!--            type="String" />-->
    <!--    </data>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_ground_clr"

        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">



                <View
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/identifier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"

                    android:hint="@string/email_or_user_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="20dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/create_new_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/create_new_account"
                        android:textSize="15sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/log_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/at_login"
                    android:textColor="@color/white" />
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_color_poacity">


            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>


    </FrameLayout>


</layout>